--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,33 @@
-html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  background: #272822;
+  color: #f8f8f2;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+#signature {
+  stroke-dasharray: 791;
+  stroke-dashoffset: 791;
+  animation: sign 4s ease;
+  animation-fill-mode: forwards;
 }
 
-* {
-  box-sizing: border-box;
+#arrow {
+  stroke-dasharray: 829;
+  stroke-dashoffset: 829;
+  animation: sign2 2s ease;
+  animation-fill-mode: forwards;
+  animation-delay: 3.8s;
+}
+
+@keyframes sign {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes sign2 {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
